--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>
-            My site!
-        </title>
+        <title>Hello</title>
+        <style>
+            h1 {
+                color: brown;
+            }
+        </style>
     </head>
     <body>
-        <h1>This is My Github Pages Website!</h1>
+        <h1>Welcome to my Web Page!!</h1>
+       Hello, world! World!!
     </body>
 </html>
