--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hello</title>
+        <title>My Site</title>
         <style>
             h1 {
                 color: brown;
@@ -9,7 +9,7 @@
         </style>
     </head>
     <body>
-        <h1>Welcome to my Web Page!!</h1>
+        <h1>Welcome to My Web Page!!</h1>
        Hello, world! World!!
     </body>
 </html>
