make it all white again

--- a/mypoem.html
+++ b/mypoem.html
@@ -51,16 +51,16 @@
     </div>
     <div class="body">
       <p class="white">Hey Chelsie,</p>
-      <p class="grey">So, here goes... I think it's about time I admit something to you that's been on my mind for a while now. You know, I'm usually a man of many words, but when it comes to this, I find myself at a loss.</p>
-      <p class="grey">I can't help but be completely, utterly, and ridiculously in love with you. Yeah, I know, it's pretty cliche, but I just had to get it off my chest. Maybe it's the way your eyes light up when you talk about your journey to becoming a doctor. Or perhaps it's how your laughter fills the room like the sweetest melody, especially when you're unwrapping a chocolate bar. Speaking of which, your love for chocolate is almost as sweet as your smile, and that's saying something.</p>
-      <p class="grey">You see, you're not just my girlfriend; you're like a sister, a confidant, a partner, and a friend all rolled into one. You make me want to be a better person, even though you know I can't resist a good dad joke. You're not perfect, and that's one of the things I love about you. Your quirks, your idiosyncrasies, they all make you even more special in my eyes.</p>
-      <p class="grey">And as much as I love sweets, I love the idea of a long-term commitment with you even more. Marriage? It's a goal that I hold dear in my heart, and I hope you'll be my partner in all the adventures life has in store for us.</p>
-      <p class="grey">So there it is, my heartfelt yet funny confession. I hope it brought a smile to your face and warmed your heart, just like you do for me every single day.</p>
-      <p class="grey">With all my love,</p>
+      <p class="white">So, here goes... I think it's about time I admit something to you that's been on my mind for a while now. You know, I'm usually a man of many words, but when it comes to this, I find myself at a loss.</p>
+      <p class="white">I can't help but be completely, utterly, and ridiculously in love with you. Yeah, I know, it's pretty cliche, but I just had to get it off my chest. Maybe it's the way your eyes light up when you talk about your journey to becoming a doctor. Or perhaps it's how your laughter fills the room like the sweetest melody, especially when you're unwrapping a chocolate bar. Speaking of which, your love for chocolate is almost as sweet as your smile, and that's saying something.</p>
+      <p class="white">You see, you're not just my girlfriend; you're like a sister, a confidant, a partner, and a friend all rolled into one. You make me want to be a better person, even though you know I can't resist a good dad joke. You're not perfect, and that's one of the things I love about you. Your quirks, your idiosyncrasies, they all make you even more special in my eyes.</p>
+      <p class="white">And as much as I love sweets, I love the idea of a long-term commitment with you even more. Marriage? It's a goal that I hold dear in my heart, and I hope you'll be my partner in all the adventures life has in store for us.</p>
+      <p class="white">So there it is, my heartfelt yet funny confession. I hope it brought a smile to your face and warmed your heart, just like you do for me every single day.</p>
+      <p class="white">With all my love,</p>
       <p class="white">Fernaldi/陈建安</p>
     </div>
     <div class="footer">
-      <p class="grey">P.S. You are the only one aside from my family that uses that name, so considered you as part of mine :P.</p>
+      <p class="white">P.S. You are the only one aside from my family that uses that name, so considered you as part of mine :P.</p>
     </div>
   </div>
 </body>
