--- a/mypoem.html
+++ b/mypoem.html
@@ -7,7 +7,7 @@
       font-size: 50px;
     }
     body {
-      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial,;
       font-size: 16px;
       font-style: italic;
       line-height: 1.5;
