--- a/mypoem.html
+++ b/mypoem.html
@@ -48,16 +48,15 @@
     </div>
     <div class="body">
       <p class="white">Hey Chelsie,</p>
-      <p class="white">So, here goes... I think it's about time I admit something to you that's been on my mind for a while now. You know, I'm usually a man of many words, but when it comes to this, I find myself at a loss.</p>
-      <p class="white">I can't help but be completely, utterly, and ridiculously in love with you. Yeah, I know, it's pretty cliche, but I just had to get it off my chest. Maybe it's the way your eyes light up when you talk about your journey to becoming a doctor. Or perhaps it's how your laughter fills the room like the sweetest melody, especially when you're unwrapping a chocolate bar. Speaking of which, your love for chocolate is almost as sweet as your smile, and that's saying something.</p>
-      <p class="white">You see, you're not just my girlfriend; you're like a sister, a confidant, a partner, and a friend all rolled into one. You make me want to be a better person, even though you know I can't resist a good dad joke. You're not perfect, and that's one of the things I love about you. Your quirks, your idiosyncrasies, they all make you even more special in my eyes.</p>
-      <p class="white">And as much as I love sweets, I love the idea of a long-term commitment with you even more. Marriage? It's a goal that I hold dear in my heart, and I hope you'll be my partner in all the adventures life has in store for us.</p>
-      <p class="white">So there it is, my heartfelt yet funny confession. I hope it brought a smile to your face and warmed your heart, just like you do for me every single day.</p>
-      <p class="white">With all my love,</p>
-      <p class="white">Fernaldi/陈建安</p>
+      <p class="white">You know, I've already spilled the beans, but there's something I have to say again. It's like my heart's a broken record stuck on this one track - I'm absolutely head over heels in love with you.</p>
+      <p class="white">You, the soon-to-be-doctor, always tending to hearts and souls, and here I am, a hopeless romantic, just trying to win yours. We might be from different departments of life, but when it comes to you, I'm ready to get my PhD in Chocolate and Sweets. I might not have the sweet tooth you do, but I promise to be the icing on your cake.</p>
+      <p class="white">I may have not seen all of you yet, but to me, you're always at your sweetest. Your smile? Good grief, it's like a dental x-ray; it just brightens up my day. If we were in a chocolate factory, you'd be the sweetest creation. You're not perfect, but you're perfectly imperfect, and that's why I love you even more. You're like a sister, a good friend, a girlfriend, and a partner all rolled into one, and it's a package deal I wouldn't trade for anything.</p>
+      <p class="white">I'm not just in this for the short-term sugar rush; I'm thinking long-term goals, and that includes a marriage with you. So here's to hoping you'll be the one to 'diagnose' my heart and say "I do."</p>
+      <p class="white">Sincerely yours,</p>
+      <p class="white">陈建安</p>
     </div>
     <div class="footer">
-      <p class="white">P.S. You are the only one aside from my family that uses that name, so considered you as part of mine :P.</p>
+      <p class="white">P.S. P.S. If you're the prescription, I'll take it daily without any side effects. And hey, when we get married, I promise I'll make all the dad jokes and puns you can handle. Our love story might be sweet, but our future together will be even sweeter. And you are the only one aside from my family that uses that name, so considered you as part of mine :P.</p>
     </div>
   </div>
 </body>
