--- a/mypoem.html
+++ b/mypoem.html
@@ -53,7 +53,7 @@
       <p class="white">I may have not seen all of you yet, but to me, you're always at your sweetest. Your smile? Good grief, it's like a dental x-ray; it just brightens up my day. If we were in a chocolate factory, you'd be the sweetest creation. You're not perfect, but you're perfectly imperfect, and that's why I love you even more. You're like a sister, a good friend, a girlfriend, and a partner all rolled into one, and it's a package deal I wouldn't trade for anything.</p>
       <p class="white">I'm not just in this for the short-term sugar rush; I'm thinking long-term goals, and that includes a marriage with you. So here's to hoping you'll be the one to 'diagnose' my heart and say "I do."</p>
       <p class="white">Sincerely yours,</p>
-      <p class="white">陈建安</p>
+      <p class="white">陈建安 - Yours</p>
     </div>
     <div class="footer">
       <p class="white">P.S. P.S. If you're the prescription, I'll take it daily without any side effects. And hey, when we get married, I promise I'll make all the dad jokes and puns you can handle. Our love story might be sweet, but our future together will be even sweeter. And you are the only one aside from my family that uses that name, so considered you as part of mine :P.</p>
