--- a/mypoem.html
+++ b/mypoem.html
@@ -28,7 +28,7 @@
     }
     .body {
       margin-top: 20px;
-      border: 2px solid antiquewhite;
+      border: 2px solid goldenrod;
       padding: 20px ;
     }
     .footer {
