--- a/mypoem.html
+++ b/mypoem.html
@@ -36,7 +36,7 @@
       margin-top: 20px;
     }
     .white {
-      color: white;
+      color: goldenrod;
     }
   </style>
   <title class="white">Confession</title>
