--- a/mypoem.html
+++ b/mypoem.html
@@ -13,10 +13,11 @@
       line-height: 1.5;
       margin: 0;
       padding: 20px;
-      background-image: url("https://i.pinimg.com/originals/66/67/21/6667212f1a480881ae54cb83d336516a.jpg");
+      background-image: url("https://ih1.redbubble.net/image.2316291633.5591/st,small,507x507-pad,600x600,f8f8f8.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+      font-weight: bold;
     }
     }
     .container {
@@ -28,7 +29,7 @@
     }
     .body {
       margin-top: 20px;
-      border: 2px solid goldenrod;
+      border: 2px solid black;
       padding: 20px ;
     }
     .footer {
@@ -36,7 +37,7 @@
       margin-top: 20px;
     }
     .white {
-      color: goldenrod;
+      color: black;
     }
   </style>
   <title class="white">Confession</title>
@@ -54,6 +55,7 @@
       <p class="white">I'm not just in this for the short-term sugar rush; I'm thinking long-term goals, and that includes a marriage with you. So here's to hoping you'll be the one to 'diagnose' my heart and say "I do."</p>
       <p class="white">Sincerely yours,</p>
       <p class="white">陈建安 - Yours</p>
+      <p class="white">(If found please return him to Chelsie)</p>
     </div>
     <div class="footer">
       <p class="white">P.S. P.S. If you're the prescription, I'll take it daily without any side effects. And hey, when we get married, I promise I'll make all the dad jokes and puns you can handle. Our love story might be sweet, but our future together will be even sweeter. And you are the only one aside from my family that uses that name, so considered you as part of mine :P.</p>
