--- a/mypoem.html
+++ b/mypoem.html
@@ -58,7 +58,7 @@
       <p class="white">(If found please return him to Chelsie)</p>
     </div>
     <div class="footer">
-      <p class="white">P.S. P.S. If you're the prescription, I'll take it daily without any side effects. And hey, when we get married, I promise I'll make all the dad jokes and puns you can handle. Our love story might be sweet, but our future together will be even sweeter. And you are the only one aside from my family that uses that name, so considered you as part of mine :P.</p>
+      <p class="white">P.S.If you're the prescription, I'll take it daily without any side effects. And hey, when we get married, I promise I'll make all the dad jokes and puns you can handle. Our love story might be sweet, but our future together will be even sweeter. And you are the only one aside from my family that uses that name, so considered you as part of mine :P.</p>
     </div>
   </div>
 </body>
